--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1.0.108"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 zip = "0.6.6"
+minecraft-assets = { git = "https://github.com/wgpu-mc/minecraft-assets.git" }
