--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 zip = "0.6.6"
 minecraft-assets = { git = "https://github.com/wgpu-mc/minecraft-assets.git" }
+tracing-log = "0.2"
+winit = "0.29"
+wgpu = "0.19"
