--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 zip = "0.6.6"
 minecraft-assets = { git = "https://github.com/wgpu-mc/minecraft-assets.git" }
-bevy = "0.13"
+bevy = { version = "0.13", features = ["wayland"] }
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
