--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ zip = "0.6.6"
 minecraft-assets = { git = "https://github.com/wgpu-mc/minecraft-assets.git" }
 bevy = { version = "0.13", features = ["wayland"] }
 bevy_egui = "0.26"
+bevy_fly_camera = { git = "https://github.com/Cyannide/bevy_fly_camera.git" }
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
