--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ zip = "0.6.6"
 minecraft-assets = { git = "https://github.com/wgpu-mc/minecraft-assets.git" }
 bevy = { version = "0.13", features = ["wayland"] }
 bevy_egui = "0.27.0"
+bevy_atmosphere = "0.9"
 # This fork is updated to bevy 0.13
 bevy_fly_camera = { git = "https://github.com/Cyannide/bevy_fly_camera.git" }
 thiserror = "1.0.58"
